<resources>
    <string name="app_name">Hangry App</string>
    <string name="title">Where to Eat?</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Preferences</string>
    <string name="title_food_decider">Hangry</string>
    <string name="food_name">Food!</string>
    <string name="no_food">…</string>
    <string name="enter_preference_name">Enter Food Preference</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_preferences">Current Food Preferences:</string>
    <string name="edit_prefs">Edit</string>
    <string name="add_prefs">Add New</string>
    <string name="finish_prefs">Finish</string>
    <string name="find_maps">Search on Google Maps</string>
</resources>